@@ -4505,27 +4505,30 @@ DONT-SUPPRESS-ERR is non-nil, stderr won't be sent to /dev/null."
   "Run COMMAND, check exit status, throw error if exit status not okay.
 Similar to `tramp-send-command-and-check' but accepts two more arguments
 FMT and ARGS which are passed to `error'."
-  (unless (tramp-send-command-and-check vec command)
-    (apply 'tramp-error vec 'file-error fmt args)))
+  (or (tramp-send-command-and-check vec command)
+      (apply 'tramp-error vec 'file-error fmt args)))
 
 (defun tramp-send-command-and-read (vec command &optional noerror)
   "Run COMMAND and return the output, which must be a Lisp expression.
 In case there is no valid Lisp expression and NOERROR is nil, it
 raises an error."
-  (tramp-barf-unless-okay vec command "`%s' returns with error" command)
-  (with-current-buffer (tramp-get-connection-buffer vec)
-    ;; Read the expression.
-    (goto-char (point-min))
-    (condition-case nil
-	(prog1 (read (current-buffer))
-	  ;; Error handling.
-	  (when (re-search-forward "\\S-" (point-at-eol) t)
-	    (error nil)))
-      (error (unless noerror
-	       (tramp-error
-		vec 'file-error
-		"`%s' does not return a valid Lisp expression: `%s'"
-		command (buffer-string)))))))
+  (when (if noerror
+	    (tramp-send-command-and-check vec command)
+	  (tramp-barf-unless-okay
+	   vec command "`%s' returns with error" command))
+    (with-current-buffer (tramp-get-connection-buffer vec)
+      ;; Read the expression.
+      (goto-char (point-min))
+      (condition-case nil
+	  (prog1 (read (current-buffer))
+	    ;; Error handling.
+	    (when (re-search-forward "\\S-" (point-at-eol) t)
+	      (error nil)))
+	(error (unless noerror
+		 (tramp-error
+		  vec 'file-error
+		  "`%s' does not return a valid Lisp expression: `%s'"
+		  command (buffer-string))))))))
 
 (defun tramp-convert-file-attributes (vec attr)
   "Convert file-attributes ATTR generated by perl script, stat or ls.
