@@ -1,3 +1,9 @@
+2011-07-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-barf-unless-okay): Return the value of
+	`tramp-send-command-and-check' if there is no error.
+	(tramp-send-command-and-read): Suppress *all* errors if NOERROR.
+
 2011-07-22  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-file-name-handler): Avoid recursive loading.
